# src/server.ts
@@ -3,6 +3,8 @@ import { WebsocketModule } from './modules/websocket';
 import { WorkflowEngineModule } from './modules/workflow-engine';
 import { IntegrationHubModule } from './modules/integration-hub';
 import { DependenciesModule } from './routes/dependencies';
+import { TenantsModule } from './routes/tenants';
+import { StorageModule } from './routes/storage';
 
 @Module({
   imports: [
@@ -10,6 +12,8 @@ import { DependenciesModule } from './routes/dependencies';
     WorkflowEngineModule,
     IntegrationHubModule,
     DependenciesModule,
+    TenantsModule,
+    StorageModule,
   ],
 })
 export class AppModule {}
